--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <header>
  <h1>Aqui vai ser uma imagem</h1>
  <ul>
-    <li> Escola</li>
-    <li> Estudante</li>
+    <li> Horários Seg - Sex 7:15 - 18:30</li>
+    <li> Telefone (43) 3326-2460</li>
+    <li> Endereço Rua Maria de Oliveira Melo, 285</li>
  </ul>
 </header>
 </body>
