--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
- <h1>Aqui vai ser uma imagem</h1>
- <ul>
-    <li> Horários Seg - Sex 7:15 - 18:30</li>
-    <li> Telefone (43) 3326-2460</li>
-    <li> Endereço Rua Maria de Oliveira Melo, 285</li>
+    <header class="cabecalho">
+ <img class="cabecalho-imagem" src="alurastartgame.jpg" alt="logo da alura start game">
+ <ul class="cabecalho-lista">
+    <li class="cabecalho-lista-item">Aluno</li>
+    <li class="cabecalho-lista-item">Responsável</li>
  </ul>
 </header>
 </body>
