--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
 </head>
 <body>
     <header class="cabecalho">
- <img class="cabecalho-imagem" src="alurastartgame.jpg" alt="logo da alura start game">
- <ul class="cabecalho-lista">
-    <li class="cabecalho-lista-item">Aluno</li>
-    <li class="cabecalho-lista-item">Responsável</li>
- </ul>
-</header>
+        <img class="cabecalho-imagem" src="alurastartgame.jpg" alt="logo da alura start game">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Aluno</li>
+            <li class="cabecalho-lista-item">Responsável</li>
+        </ul>
+    </header>
+    <section class="escola">
+        <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <p class="escola-texto-um">Na turma do 2º B de programação I do Colégio Cívico-Militar Dr. Heber Soares Vargas, os alunos estão sempre animados e participativos. Eles adoram aprender sobre programação e trabalham juntos com muito entusiasmo. Com o apoio dos professores, enfrentam desafios com vontade e colaboram ativamente. Cada aula é uma oportunidade para eles explorarem novas linguagens de programação e se envolverem em projetos práticos. O ambiente disciplinado da escola só aumenta o foco e a determinação dessa turma. Eles são um exemplo brilhante de como a paixão pelo aprendizado e a união podem impulsionar o sucesso acadêmico e pessoal.</p> 
+        </div>
+        <img class="escola-imagem" src="menino-programando.png" alt="Menino programando">
+    </section>
 </body>
 </html>
