--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Minha primeira página</title>
     <link rel="stylesheet" href="style.css">
 </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 <body>
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="alurastartgame.jpg" alt="logo da alura start game">
@@ -20,6 +23,11 @@
             <p class="escola-texto-um">Na turma do 2º B de programação I do Colégio Cívico-Militar Dr. Heber Soares Vargas, os alunos estão sempre animados e participativos. Eles adoram aprender sobre programação e trabalham juntos com muito entusiasmo. Com o apoio dos professores, enfrentam desafios com vontade e colaboram ativamente. Cada aula é uma oportunidade para eles explorarem novas linguagens de programação e se envolverem em projetos práticos. O ambiente disciplinado da escola só aumenta o foco e a determinação dessa turma. Eles são um exemplo brilhante de como a paixão pelo aprendizado e a união podem impulsionar o sucesso acadêmico e pessoal.</p> 
         </div>
         <img class="escola-imagem" src="menino-programando.png" alt="Menino programando">
+    </section>
+    <section class="estudante">
+        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <img class="estudante-imagem" src="menino-formando.png" alt="foto aluno">
+        <h3>Murilo</h3>
     </section>
 </body>
 </html>
