--- a/index.html
+++ b/index.html
@@ -26,8 +26,56 @@
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-        <img class="estudante-imagem" src="menino-formando.png" alt="foto aluno">
-        <h3>Murilo</h3>
+        <div class="estudantes-todos">
+            <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="menino-formando.png" alt="foto aluno">
+            <h3 class="estudante-nome">Murilo</h3>
+            <img class="estudante-icone" src="linkedin.png" alt="Ícone Linkedin">
+            <a href="
+            https://github.com/mumulinguisa/site-criativo.git"><img class="estudante-icone" src="github.png" alt="Ícone GitHub"></a>
+            <img class="estudante-icone" src="instagram.png" alt="Ícone Instagram">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="menino-formando.png" alt="foto aluno">
+            <h3 class="estudante-nome">Adriano</h3>
+            <img class="estudante-icone" src="linkedin.png" alt="Ícone Linkedin">
+            <a href="https://github.com/adrianoelias/site-criativo.git"><img class="estudante-icone" src="github.png" alt="Ícone GitHub"></a>
+            <img class="estudante-icone" src="instagram.png" alt="Ícone Instagram">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="menina-formanda.png" alt="foto aluna">
+            <h3 class="estudante-nome">Giulia</h3>
+            <img class="estudante-icone" src="linkedin.png" alt="Ícone Linkedin">
+            <img class="estudante-icone" src="github.png" alt="Ícone GitHub">
+            <img class="estudante-icone" src="instagram.png" alt="Ícone Instagram">
+        </div>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="menina-formanda.png" alt="foto aluna">
+            <h3 class="estudante-nome">Maria Eduarda</h3>
+            <img class="estudante-icone" src="linkedin.png" alt="Ícone Linkedin">
+            <img class="estudante-icone" src="github.png" alt="Ícone GitHub">
+            <img class="estudante-icone" src="instagram.png" alt="Ícone Instagram">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="menina-formanda.png" alt="foto aluna">
+            <h3 class="estudante-nome">Gabriela</h3>
+            <img class="estudante-icone" src="linkedin.png" alt="Ícone Linkedin">
+            <a href="https://github.com/bibiel25/site-criativo.git"><img class="estudante-icone" src="github.png" alt="Ícone GitHub"></a>
+            <img class="estudante-icone" src="instagram.png" alt="Ícone Instagram">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="menino-formando.png" alt="foto aluno">
+            <h3 class="estudante-nome">Davi</h3>
+            <img class="estudante-icone" src="linkedin.png" alt="Ícone Linkedin">
+            <a href="https://github.com/DAVIVIEIRA24/Site-Criativo.git"><img class="estudante-icone" src="github.png" alt="Ícone GitHub"></a>
+            <img class="estudante-icone" src="instagram.png" alt="Ícone Instagram">
+        </div>
+        </div>
     </section>
+    <footer class="rodape">
+        <img class="rodape-imagem" src="alurastart.png" alt="Logo alura rodape">
+    </footer>
 </body>
 </html>
